--- a/index.html
+++ b/index.html
@@ -8,13 +8,5 @@
     <link rel="stylesheet" href="app.css" />
     <script type="module" src="dist/bundle.js"></script>
   </head>
-  <body>
-    <div id="map">
-      <p>Please enter an address!</p>
-    </div>
-    <form>
-      <input type="text" id="address" />
-      <button type="submit">SEARCH ADDRESS</button>
-    </form>
-  </body>
+  <body></body>
 </html>
